<resources>
    <string name="app_name">Nice User Form</string>

    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="ForgotPassword">Forgot password?</string>
    <string name="Welcome">Welcome to the app</string>
    <string name="RepeatPass">Repeat password</string>
    <string name="Name">Name</string>
    <string name="Surnames">Surnames</string>
    <string name="Email">Email</string>
    <string name="GenderPr">Gender pronoun</string>
    <string name="NiceForm">NICE USER FORM</string>
    <string name="BirthDate">Birth date</string>
    <string name="Terms">Accept terms and conditions</string>
</resources>